Fixed width scaling to fix issue with objects not fitting on screen, and made images/cards wrap

--- a/style.css
+++ b/style.css
@@ -38,9 +38,9 @@ button:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1500px;
+    max-width: 1200px;
     margin: 0 auto;
-
+    padding: 0 20px;
 }
 
 .logo{
@@ -55,7 +55,7 @@ button:hover {
     align-items: center;
     max-width: 1000px;
     gap: 50px;
-    padding: 50px 0;
+    padding: 50px 20px;
     margin: 0 auto;
 
 }
@@ -117,18 +117,21 @@ button:hover {
 .info-container{
     display: flex;
     justify-content: center;
-    gap: 50px;
+    gap: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+    flex-wrap: wrap;
 }
 
 .card{
     text-align: center;
-    max-width: 350px;
+    max-width: 250px;
     font-size: 20px;
 }
 
 .card .box{
-    width: 350px;
-    height: 350px;
+    width: 250px;
+    height: 250px;
     border: 4px solid #3882f6;
     border-radius: 15px;
     margin-bottom: 10px;
